--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <h6>fsdvsdfvsdvsdvsvsv</h6>
 
 
-   <script src="js/callbackFunction.js"></script>
+   <script src="js/objects.js"></script>
 </body>
 
 </html>
