A lot of information

--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" type="text/css" href="style.css">
    <title>Document</title>
 </head>
 
 <body>
-   <p onclick="">Hello World Hello At all</p>
-   <h2>Hello ma Baby </h2>
-   <h2>Hello borthers</h2>
-   <h4>GFsdgsdgsdg</h4>
-   <h6>fsdvsdfvsdvsdvsvsv</h6>
-
-
-   <script src="js/dynamicType.js"></script>
+   <div class="box" id="box"></div>
+   <button>1</button>
+   <button>2</button>
+   <button>3</button>
+   <button>4</button>
+   <button>5</button>
+   <div class="wrapper">
+      <div class="circle"></div>
+      <div class="circle"></div>
+   </div>
+   <!-- <div class="circle"></div>
+   <div class="circle"></div> -->
+   <script src="js/dom.js"></script>
 </body>
 
 </html>
